【test】更新测试环境

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,18 @@
                 "PYTHONPATH": "${workspaceRoot}"
             },
             "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "name": "Python: specail_test",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceRoot}/test/bar_test.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "evn": {
+                "PYTHONPATH": "${workspaceRoot}"
+            },
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
