【tushare】修复运行警告, 新增 pytdx工程引入

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "evn": {
-                "PYTHONPATH": "${workspaceRoot}"
-            },
-            "envFile": "${workspaceFolder}/.env"
+            "envFile": "${workspaceFolder}/.vscode/.env"
         },
         {
             "name": "Python: SimpleTest",
@@ -23,10 +20,7 @@
             "program": "${workspaceRoot}/studio/simpletest.py",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "evn": {
-                "PYTHONPATH": "${workspaceRoot}"
-            },
-            "envFile": "${workspaceFolder}/.env"
+            "envFile": "${workspaceFolder}/.vscode/.env"
         },
         {
             "name": "Python: specail_test",
@@ -35,10 +29,7 @@
             "program": "${workspaceRoot}/test/bar_test.py",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "evn": {
-                "PYTHONPATH": "${workspaceRoot}"
-            },
-            "envFile": "${workspaceFolder}/.env"
+            "envFile": "${workspaceFolder}/.vscode/.env",
         }
     ]
 }
